--- a/.github/workflows/count.yml
+++ b/.github/workflows/count.yml
@@ -15,5 +15,5 @@ jobs:
         run: python3 tools/count_datasets.py
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          commit_message: Update readme gif
+          commit_message: Update readme count
           file_pattern: '*.md'
