--- a/project.json
+++ b/project.json
@@ -3,9 +3,9 @@
     "description": "This repository contains data that ChatGPT has created.",
     "version": "",
     "main_file": "none",
-    "author": "Lewis Evans",
+    "author": "0x4248",
     "license": "unlicenced",
-    "url": "https://www.github.com/lewisevans2007/GPT-dataset",
+    "url": "https://www.github.com/0x4248/GPT-dataset",
     "email": "none",
     "languages": [
         "python"
